--- a/styles/index.css
+++ b/styles/index.css
@@ -1,31 +1,16 @@
 #greeting {
-	width: 100%;
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
-}
-
-h1, #greeting h2 {
+	justify-content: center;
 	text-align: center;
 }
 
-h3, p {
-	margin-bottom: 12px;
-}
-
 section:not(#greeting) {
-	border-bottom: 8px solid var(--fg-color);
-	padding: 4rem;
-}
-
-th {
-	min-width: max-content;
-}
-
-@media screen and (max-width: 800px) {
-	section:not(#greeting) {
-		padding: 2rem;
-	}
+	margin: var(--huge-space);
+	padding: var(--small-space);
+	border: var(--tiny-space) solid var(--b-color);
+	border-radius: var(--medium-space);
+	background-color: var(--bg-hl-color);
 }
