Updated color theme

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,8 @@
 :root {
-      --bg-color: #ffe3e3;
-      --fg-color: #262a53;
-      --h1-color: #ffa0a0;
-	--h2-color: #628395;
+      --bg-color: #1e1e2e;
+      --fg-color: #cdd6f4;
+      --h1-color: #fab387;
+	--h2-color: #89b4fa;
 	--small: 8px;
 	--medium: 16px;
 	--big: 32px;
